--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Small Game Studio">
     <script defer src="src/tailwind.3.4.3.js"></script>
-    <title>Vite App</title>
+    <title>LSID Studios</title>
   </head>
   <body>
     <div id="app"></div>
