--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="theme-color" content="#059669"/>
+    <link rel="pwaicon" href="./icon512_maskable.png">
+    <link rel="pwaicon" href="./icon512_rounded.png">
+    <meta name="theme-color" content="#ffffff"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Small Game Studio">
-    <script defer src="src/tailwind.3.4.3.js"></script>
+    <script defer src="src/tailwind.3.4.3.js" type="module"></script>
     <link rel="manifest" href="manifest.json" />
     <title>LSID Studios</title>
   </head>
